added uml diagram tidied source