@@ -11,7 +11,6 @@ import org.art_core.dev.cinder.CinderLog;
 import org.art_core.dev.cinder.CinderTools;
 import org.art_core.dev.cinder.model.IItem;
 import org.art_core.dev.cinder.model.PropertiesItem;
-import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IWorkspaceRoot;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.w3c.dom.Document;
@@ -28,8 +27,7 @@ public class XmlInputReader implements IInputHandler {
 		String sPath = root.getLocation().toString();
 		sFilename = sPath + "/" + file;
 
-		CinderLog.logInfo("XIR:path: "+sPath);
-		CinderLog.logInfo("XIR:plus: "+sFilename);
+		CinderLog.logInfo("XIR:path:" + sPath + "_" + sFilename);
 
 		readFile(sFilename);
 	}
@@ -41,36 +39,42 @@ public class XmlInputReader implements IInputHandler {
 	}
 
 	@Override
-	public void readFile(String sFilename) {
-		PropertiesItem xi;
-		File f = new File(sFilename);
-		CinderLog.logInfo("XIR:len:"+f.length());
+	public void readFile(String sFilename) {		
+		File fXml = new File(sFilename);
+		CinderLog.logInfo("XIR:len:"+fXml.length());
 		DocumentBuilderFactory fac = DocumentBuilderFactory.newInstance();
 		try {
 			DocumentBuilder builder	= fac.newDocumentBuilder();
-			Document doc = builder.parse(f);
-			NodeList fileNodes = doc.getChildNodes().item(0).getChildNodes();
+			Document doc = builder.parse(fXml);
+
+			PropertiesItem xi;
+			NodeList fileNodes, errorNodes;
+			Integer eLine, eColumn;
+			String eSeverity, eMessage, ePattern, sTargetFileName;			
+			Element fileElement, error;
+			
+			fileNodes = doc.getChildNodes().item(0).getChildNodes();
 			// handle all <file name=""> sections
 			for (int fIndex = 0; fIndex < fileNodes.getLength(); fIndex++) {
-				// ignore whitespaces
+				// ignore whitespace
 				if (fileNodes.item(fIndex).getNodeType() == Node.ELEMENT_NODE) {
-					Element fileElement = (Element)fileNodes.item(fIndex);
-					String fileName = fileElement.getAttribute("name");
-					CinderLog.logInfo("XIR:"+fileName);
-					NodeList errorNodes = fileElement.getChildNodes();
+					fileElement = (Element)fileNodes.item(fIndex);
+					sTargetFileName = fileElement.getAttribute("name");
+					CinderLog.logInfo("XIR::read:" + sTargetFileName);
+					errorNodes = fileElement.getChildNodes();
 					// handle all <error line="" column="" severity="" message="" pattern=""> sections
 					for (int eIndex = 0; eIndex < errorNodes.getLength(); eIndex++) {
-						// ignore whitespaces
+						// ignore whitespace
 						if (errorNodes.item(eIndex).getNodeType() == Node.ELEMENT_NODE) {
-							Element error = (Element)errorNodes.item(eIndex);
+							error = (Element)errorNodes.item(eIndex);
 							
-							Integer eLine = new Integer(error.getAttribute("line"));
-							Integer eColumn = new Integer(error.getAttribute("column"));
-							String eSeverity = error.getAttribute("severity");
-							String eMessage = error.getAttribute("message");
-							String ePattern = error.getAttribute("pattern");
+							eLine = Integer.valueOf(error.getAttribute("line"));
+							eColumn = Integer.valueOf(error.getAttribute("column"));
+							eSeverity = error.getAttribute("severity");
+							eMessage = error.getAttribute("message");
+							ePattern = error.getAttribute("pattern");
 							
-							xi = new PropertiesItem(ePattern, fileName,
+							xi = new PropertiesItem(ePattern, sTargetFileName,
 									CinderTools.chooseType(eSeverity),
 									eLine.intValue(), eColumn.intValue());
 							xi.setMessage(eMessage);
